name:                icaohs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iamteem/icaohs#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Medina
maintainer:          iamteem@gmail.com
copyright:           Tim Medina
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2
                     , containers >= 0.5
                     , hashtables >= 1.2
  default-language:    Haskell2010

executable icaohs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icaohs
  default-language:    Haskell2010

test-suite icaohs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , icaohs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iamteem/icaohs
